2008-07-22  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Header.cs:
	Optimize the loop that checks to see if a click happened on a column's
	resize area.  Add some comments.

2008-07-22  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Interaction.cs:
	Fix glitch where the resize cursor would flash away when you actually
	pressed the mouse button, but then come back when you started moving.

2008-07-22  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Services.mdp:
	* src/Core/Banshee.Services/Makefile.am:
	* src/Core/Banshee.Services/Banshee.Metadata.FileSystem/FileSystemMetadataProvider.cs:
	* src/Core/Banshee.Services/Banshee.Metadata.FileSystem/FileSystemQueryJob.cs:
	New provider that gets cover art files from the folder a track is in (BGO
	#528137, BGO #336249).  Looks for the largest JPG file in the folder.

	* src/Core/Banshee.Services/Banshee.Metadata/MetadataService.cs: Use the
	new provider, after the embedded provider.

	* src/Core/Banshee.Core/Banshee.Collection/IBasicTrackInfo.cs: Add Uri
	property.

2008-07-22  Gabriel Burt  <gabriel.burt@gmail.com>

	This commit does the backend (non-UI) work to make filters (eg
	artist/album/genre/etc browsers) on sources customizable.  All the UI work
	still needs to be done - actually supporting showing an arbitrary number
	and set of filters, and the UI, perhaps menus, to actually
	add/remove/replace filters.

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/StationSource.cs:
	* src/Extensions/Banshee.AudioCd/Banshee.AudioCd/AudioCdSource.cs:
	Since the FilterModels property was removed from the ITrackModelSource, no
	longer need to implement it for sources that aren't filterable.

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseTrackListModel.cs:
	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/CompositeTrackSourceContents.cs: